--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/slider": "4.5.6",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-
     "@supabase/supabase-js": "^2.49.10",
-
     "appwrite": "^18.1.1",
-    "expo": "~53.0.9",
-    "expo-blur": "~14.1.4",
+    "expo": "^53.0.11",
+    "expo-blur": "^14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
+    "expo-image": "^2.3.0",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.7",
-    "expo-splash-screen": "~0.30.8",
+    "expo-router": "^5.1.0",
+    "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
+    "expo-symbols": "^0.4.5",
+    "expo-system-ui": "^5.0.8",
     "expo-web-browser": "~14.1.6",
     "firebase": "^11.9.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17",
-    "@react-native-community/slider": "4.5.6"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
