--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-print": "^14.1.4",
     "expo-router": "^5.1.0",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "^0.4.5",
@@ -47,6 +49,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17"
